--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-utilities",
-  "version": "1.0.0",
+  "name": "@herii/node-utilities",
+  "version": "1.0.1",
   "description": "Multiple utilities for node.js projects. Including common utilities, useful for all kinds of projects.",
   "main": "index.js",
   "scripts": {
