--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@herii/node-utilities",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Multiple utilities for node.js projects. Including common utilities, useful for all kinds of projects.",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,9 @@
   "keywords": [
     "node",
     "utilities",
-    "common"
+    "common",
+    "address_components",
+    "google maps api"
   ],
   "author": "Heriberto Juárez",
   "license": "MIT",
